--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,6 @@
     <div>
       <a href="index.html">Home</a>   l   <a href="experience.html">Experience</a>   l   <a href="contact.html">contact</a>
     </div>
-    <p>My name is Chayangkul Chanjarupong</p>
+    <p>My name is Chayangkul </p>
   </body>
 </html>
