--- a/experience.html
+++ b/experience.html
@@ -26,6 +26,7 @@
     <div>
         <a href="index.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
     </div>
+    <div>&nbsp;</div>
     <h1>My Experience</h1>
     <div class="content-container">
         <div class="content-frame">
