--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </div>
     <a target="_blank" href="contact.html"><img  src="./img/S__61702158.jpg" height="350px" width="350px" alt="Myself" >  </a>   
     <h3>ประวัติส่วนตัว</h3>
+    <p class = "z">ชื่อ&nbsp;:&nbsp;&nbsp;&nbsp;ชยางกูร จันทร์จารุพงศ์</p>
+    <p class = "ั">ชื่อเล่น&nbsp;:&nbsp;&nbsp;&nbsp;ปกป้อง</p>
     <p class = "a">อายุ&nbsp;:&nbsp;&nbsp;&nbsp;19</p>
     <p class = "b">น้ำหนัก&nbsp;:&nbsp;&nbsp;&nbsp;98</p>
     <p class = "c">ส่วนสูง&nbsp;:&nbsp;&nbsp;&nbsp;183.5</p>
