--- a/experience.html
+++ b/experience.html
@@ -6,14 +6,22 @@
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@100..900&family=Playwrite+US+Trad:wght@100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad:wght@100..400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="exp.css">
+    <link rel="stylesheet" href="./exp.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <style>
     body {
-        background-image: url("./img/abstract-watercolor-pastel-background_87374-126.avif");
-        background-size: 600px 1800px;
-        margin: 0;
-        padding: 0;
+        background-color: rgb(255, 229, 199);
     }
 
     .content-container {
@@ -23,10 +31,11 @@
     }
 </style>
 <body>
-    <div>&nbsp;</div>
+
     <div>
-        <a href="index.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
+        <a href="./index.html"><button class="btn btn-danger">Home</button></a>      <a href="./experience.html"><button class="btn btn-danger">Experience</button></a>      <a href="./contact.html"><button class="btn btn-danger">Contact</button></a>    <a href="./gallery.html"><button class="btn btn-danger">Gallery</button></a>
     </div>
+    <div> &nbsp;</div>
     
     <h1>My Experience</h1>
     <div class="content-container">
